Bump JavaFX version to 23, added FXThemes by pixelduke, added VM options